--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Midnight">#3D0867</color>
-    <color name="coolpurple">#9392E0</color>
+    <color name="coolpurple">#877CFF</color>
 </resources>
