--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -6,21 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".SignupPage"
     android:background="@drawable/loginpage">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/signup_photo"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        app:shapeAppearanceOverlay="@style/roundimage"/>
     <EditText
+        android:layout_below="@id/signup_photo"
         android:id="@+id/signup_username"
         android:layout_width="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:background="@drawable/edittextshape"
         android:layout_centerHorizontal="true"
-       android:layout_marginTop="50dp"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
+       android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/person"
         android:drawablePadding="20dp"
         android:paddingLeft="20dp"
         android:textColorHint="@color/coolpurple"
         android:hint="Username"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textStyle="italic"
         android:textColor="@color/coolpurple"
 
@@ -29,7 +39,7 @@
     <EditText
         android:id="@+id/signup_email"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_below="@id/signup_username"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
@@ -45,31 +55,33 @@
         android:textColorHint="@color/coolpurple"
         android:textColor="@color/coolpurple"
 
-        android:textSize="25dp"/>
+        android:textSize="20dp"/>
 
     <EditText
-        android:id="@+id/signup_address"
+        android:id="@+id/signup_phone"
+        android:maxLength="8"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_below="@id/signup_email"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/edittextshape"
-        android:drawableLeft="@drawable/ic_baseline_numbers_24"
+        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
         android:drawablePadding="20dp"
-        android:hint="Address"
+        android:hint="Phone Number"
         android:textStyle="italic"
         android:paddingLeft="20dp"
         android:textColorHint="@color/coolpurple"
         android:textColor="@color/coolpurple"
-        android:textSize="25dp"/>
+        android:textSize="20dp"
+        android:inputType="number"/>
     <EditText
         android:id="@+id/signup_password"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_below="@id/signup_address"
+        android:layout_height="60dp"
+        android:layout_below="@id/signup_phone"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -82,12 +94,12 @@
         android:paddingLeft="20dp"
         android:inputType="textPassword"
         android:textColorHint="@color/coolpurple"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textColor="@color/coolpurple" />
     <EditText
         android:id="@+id/signup_rpassword"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_below="@id/signup_password"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
@@ -97,12 +109,12 @@
         android:background="@drawable/edittextshape"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="20dp"
-        android:hint="Repeat Password"
+        android:hint="Confirm Password"
         android:textStyle="italic"
         android:paddingLeft="20dp"
         android:inputType="textPassword"
         android:textColorHint="@color/coolpurple"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textColor="@color/coolpurple"
         />
     <TextView
@@ -130,6 +142,17 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="30sp"
+        />
+
+    <ProgressBar
+        android:id="@+id/loadingprogress"
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:layout_below="@id/signup_rpassword"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="50dp"
         />
 
 </RelativeLayout>
