--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -11,7 +11,8 @@
         android:id="@+id/signup_photo"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher_round"
+        android:scaleType="centerCrop"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         app:shapeAppearanceOverlay="@style/roundimage"/>
