--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#9742FF</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -8,5 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Midnight">#3D0867</color>
-    <color name="coolpurple">#877CFF</color>
+    <color name="coolpurple">#6F62FB</color>
+    <color name="redditgray">#161617</color>
+    <color name="purplegray">#653788</color>
+    <color name="colorful">#D104E8</color>
+    <color name="gray">#AEAEAE</color>
+
 </resources>
